crates/agentwatch/src/snapshots/agentwatch__tui__tests__agentwatch_tui_summary.snap
---
source: crates/agentwatch/src/tui_tests.rs
assertion_line: 425
expression: "render_snapshot(&state, &cache, 120, 28)"
---
 AgentWatch   repo:routa-js  branch:main    FILES VIEW · FOLLOW ON  rpc:socket  ag:2 act:1  dirty:2  unknown:1  synced 2
┌Agents──────────────────────┐┌Files───────────────────────────────────────────┐┌Diff Preview──────────────────────────┐
│2 total  1 active  1 idle  2││ ALL FILES    REVIEW UNKNOWN                    ││@@ -1,2 +1,3 @@                       │
│                            ││2 files  M:1 D:1  E:1 I:0 U:1                   ││-use old                              │
│4211 ◈ Codex  ACTIVE        ││────────────────────────────────────────────────││+use new                              │
│cpu  2.5%  mem 128MB  up    ││> tui.rs                                        ││+use cache                            │
│01:35                       ││  crates/agentwatch/src                         ││                                      │
│proj project  conf 80%      ││M  +38 -5     4m  EXACT                         ││                                      │
│                            ││  route.ts                                      ││                                      │
│9001 ◆ Claude  IDLE         ││  src/app/api/a2a/card                          ││                                      │
│cpu  0.1%  mem 96MB  up     ││D  -12        5m  UNKNOWN                       ││                                      │
│<ts>                    ││                                                ││                                      │
│proj elsewhere  conf 80%    ││                                                ││                                      │
│                            ││                                                ││                                      │
│                            ││                                                ││                                      │
│                            │└────────────────────────────────────────────────┘│                                      │
│                            │┌Details─────────────────────────────────────────┐│                                      │
│                            ││tui.rs                                          ││                                      │
│                            ││crates/agentwatch/src                           ││                                      │
│                            ││Last by: impl-buddy                             ││                                      │
│                            ││Modified: <ts> (4m)                         ││                                      │
└────────────────────────────┘└────────────────────────────────────────────────┘└──────────────────────────────────────┘
┌Event Stream (all)────────────────────────────────────────────────────────────────────────────────────────────────────┐
│<ts>  WATCH  modify   crates/agentwatch/src/tui.rs                                                                │
│<ts>  HOOK   live-hook-check Edit Write                                                                           │
│<ts>  GIT    post-commit main                                                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
Tab focus  ↑↓ select  u unknown  d preview/diff  Pg scroll  f follow:on  T theme  Esc clear  q quit
